# xjp-oidc

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DCR.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  LOGGING.md  NEW_FEATURES.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  SDK_TENANT_REFACTOR_CHANGELOG.md  SECURITY.md  SECURITY_CHECKLIST.md  SSE_SUPPORT.md  TROUBLESHOOTING.md  deny.toml
.github/workflows/: ci.yml  release.yml  sbom.yml  security.yml
.specstory/history/: 2025-09-19_08-14Z-获取项目的-github-地址.md
auth-bff/: Cargo.toml  Dockerfile  README.md
auth-bff/src/: config.rs  error.rs  handlers.rs  main.rs  session.rs
examples/: sse-login-example.rs  tracing-example.rs
examples/axum-bff/: Cargo.toml  README.md  main.rs
examples/axum-guard/: README.md  main.rs
examples/cli-discover/: README.md  main.rs
examples/dcr-registration/: Cargo.toml  README.md
examples/dcr-registration/src/: main.rs
examples/resource-server/: Cargo.toml  Dockerfile  README.md  test.sh
examples/resource-server/src/: main.rs
examples/test-tenant-discovery/: Cargo.toml  main.rs
scripts/: generate-sbom.sh  security-scan.sh
test-backend-connection/: Cargo.toml
test-backend-connection/src/: main.rs
xjp-oidc/: .gitignore  Cargo.toml  clippy.toml  deny.toml  rustfmt.toml
xjp-oidc-axum/: Cargo.toml
xjp-oidc-axum/src/: error.rs  extractors.rs  layer.rs  lib.rs
xjp-oidc/.github/workflows/: ci.yml
xjp-oidc/examples/: new_features_example.rs
xjp-oidc/src/: auth_url.rs  cache.rs  client.rs  dcr.rs  discovery.rs  discovery_tenant.rs  errors.rs  exchange.rs  http.rs  http_tenant.rs  id_token.rs  introspect.rs  jwks.rs  lib.rs  pkce.rs  sse.rs  tenant.rs  types.rs  userinfo.rs  verify.rs
xjp-oidc/tests/: auth_url_tests.rs  cache_tests.rs  discovery_tests.rs  id_token_tests.rs  integration_dcr_test.rs  integration_exchange_test.rs  integration_new_features_test.rs  integration_verifier_test.rs  introspect_userinfo_test.rs  jwks_tests.rs  pkce_tests.rs
