[package]
name = "test-backend-connection"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xjp-oidc = { path = "../xjp-oidc", features = ["http-reqwest", "moka"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
base64 = "0.22"