[package]
name = "axum-bff-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-bff"
path = "main.rs"

[dependencies]
xjp-oidc = { path = "../../xjp-oidc", features = ["moka"] }
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
tower = "0.5"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"