[package]
name = "dcr-registration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dcr"
path = "src/main.rs"

[dependencies]
# OIDC SDK
xjp-oidc = { path = "../../xjp-oidc" }

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Utils
colored = "2.1"
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }